# ultimate-python

./: .coveragerc  .editorconfig  .gitignore  .replit  AGENTS.md  Bet bot  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calculator and equations using python  LICENSE  Number Guessing game  Principle component analysis (PCA).ipynb  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ko.md  README.md  README.pt_br.md  README.src.md  README.zh_tw.md  check_readmes.py  codecov.yml  new.txt  new_file.txt  pre-commit.sh  ps3_hangman.py  pyproject.toml  requirements.txt  runner.py  sample.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  nrg.yml
ui/: .gitignore  .prettierrc.mjs  astro.config.mjs  package-lock.json  package.json  parse_lessons.py  tsconfig.json
ultimatepython/: conditional.py  data_structures.py  expression.py  function.py  loop.py  variable.py
ultimatepython/advanced/: async.py  benchmark.py  context_manager.py  data_format.py  date_time.py  datetime.py  decorator.py  exception_groups.py  file_handling.py  meta_class.py  mixin.py  mixins.py  mocking.py  mro.py  pattern_matching.py  regex.py  subinterpreters.py  thread.py  threads.py  weak_ref.py
ultimatepython/classes/: abstract_class.py  basic_class.py  encapsulation.py  exception_class.py  inheritance.py  iterator_class.py  meta_class.py  simple.py
ultimatepython/concurrency/: __init__.py  thread.py
ultimatepython/data_structures/: Linked_list.py  __init__.py  comprehension.py  (+15 more)
(+41 files in other folders)
