[tool.poetry]
name = "ultimate-python"
version = "1.0.0"
description = "Ultimate Python study guide"
authors = ["Samuel Huang <samhuang91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^6.3"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
