[tool.poetry]
name = "ultimate-python"
version = "1.0.0"
description = "Ultimate Python study guide"
authors = ["Samuel Huang <samhuang91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.0"
coverage = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
